<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.AlarmSettingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/setting_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ScrollView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">
                            <android.support.v7.widget.AppCompatCheckBox
                                android:id="@+id/repeat_or_not"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:id="@+id/text_repeat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_repeat"
                                android:textSize="16sp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">
                            <android.support.v7.widget.AppCompatCheckBox
                                android:id="@+id/vibrate_or_not"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:id="@+id/text_vibrate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_vibrate"
                                android:textSize="16sp"/>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center">
                            <TextView
                                android:id="@+id/text_ringtonetitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_ringtone"
                                android:textSize="16sp"
                                />
                            <TextView
                                android:id="@+id/text_ringtone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_ringtone_default"
                                android:textSize="14sp"
                                android:textColor="@color/lowerTextColor"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center">
                            <TextView
                                android:id="@+id/text_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_label"
                                android:textSize="16sp" />
                            <TextView
                                android:id="@+id/text_tag"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_label_default"
                                android:textSize="14sp"
                                android:textColor="@color/lowerTextColor"/>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
